--- a/chart.html
+++ b/chart.html
@@ -9,7 +9,8 @@
             content="charts, graphics, molten, molten-wow, players, world of warcraft, molten realms, players online,
                 WotLK, Lordaeron, Deathwing, Ragnaros, Cataclysm, Frostwolf, Neltharion, Sargeras, Warsong" />
         <style type="text/css">
-            h1 { color: #333; font-family: "Arial", sans-serif; margin-bottom: 0; text-align: center; }
+            h1, h2 { color: #333; font-family: "Arial", sans-serif; text-align: center; margin-bottom: 0;  }
+            h2 { margin: 0; font-size: 12pt; color: #666; }
         </style>
     </head>
     <body>
@@ -31,12 +32,10 @@
                         '{{ translations[realm] }} (queued)',
     {% endfor %}
                     ],
-    
-    {# for each one of the values... #}            
+    {# for each one of the values... #}
     {% for sample in charts[chart].iteritems() %}
                     [
                         '{{ sample[0] }}', {# timestamp #}
-            
         {% for lines in sample[1] %}
             {% for value in lines[1:] %}
                         {{ value }},
@@ -47,14 +46,24 @@
                 ]);
 {% endfor %}
 
+                var options = {
+                    'title': false,
+                    'vAxis': {
+                        'ticks': [0, 250, 500, 750, 1000, 1250, 1500, 1750, 2000, 2250, 2500, 2750, 3000, 3250, 3500, 3750, 4000],
+                        'viewWindowMode': 'maximized',
+                    }
+                };
+
 {% for chart in charts.keys() %}
+                options.title = '{{ chart }}';
                 var {{ chart }}_chart = new google.visualization.LineChart(document.getElementById('{{ chart }}_chart_div'));
-                {{ chart }}_chart.draw({{ chart }}_chart_data, {title: '{{ chart }}'});
+                {{ chart }}_chart.draw({{ chart }}_chart_data, options);
 {% endfor %}
             }
         </script>
 
         <h1>Molten: players online in the last 48 hours</h1>
+        <h2>Last update: {{ now }}</h2>
 {% for chart in charts.keys() %}
         <div id="{{ chart }}_chart_div" style="width: 1200px; height: 500px;"></div>
 {% endfor %}
