--- a/chart.html
+++ b/chart.html
@@ -35,7 +35,7 @@
     {# for each one of the values... #}
     {% for sample in charts[chart].iteritems() %}
                     [
-                        '{{ sample[0] }}', {# timestamp #}
+                        '{{ sample[0] }}',
         {% for lines in sample[1] %}
             {% for value in lines[1:] %}
                         {{ value }},
