--- a/chart.html
+++ b/chart.html
@@ -24,21 +24,25 @@
 #}
             function drawChart() {
 {% for chart in charts.keys() %}
-                var {{ chart }}_chart_data = google.visualization.arrayToDataTable([
-                    [
-                        'Time',
+                var {{ chart }}_chart_data = new google.visualization.DataTable();
+                {{ chart }}_chart_data.addColumn('string', 'Time');
     {% for realm in realms[chart] %}
-                        '{{ translations[realm] }} (online)',
-                        '{{ translations[realm] }} (queued)',
+                {{ chart }}_chart_data.addColumn('number', '{{ translations[realm] }} (online)');
+                {{ chart }}_chart_data.addColumn('number', '{{ translations[realm] }} (queued)');
     {% endfor %}
-                    ],
+
+                {{ chart }}_chart_data.addRows([
     {# for each one of the values... #}
     {% for sample in charts[chart].iteritems() %}
                     [
                         '{{ sample[0] }}',
         {% for lines in sample[1] %}
             {% for value in lines[1:] %}
+                {% if value == 0 %}
+                        null,
+                {% else %}
                         {{ value }},
+                {% endif %}
             {% endfor %}
         {% endfor %}
                     ],
