make it validate

--- a/chart.html
+++ b/chart.html
@@ -5,8 +5,7 @@
         <title>Molten: players online in the last 48 hours</title>
         <script src="https://www.google.com/jsapi"></script>
         <meta name="description" content="Charts with an evolution of the number of players online on all Molten realms." />
-        <meta name="keywords"
-            content="charts, graphics, molten, molten-wow, players, world of warcraft, molten realms, players online,
+        <meta name="keywords" content="charts, graphics, molten, molten-wow, players, world of warcraft, molten realms, players online,
                 WotLK, Lordaeron, Deathwing, Ragnaros, Cataclysm, Frostwolf, Neltharion, Sargeras, Warsong" />
         <style type="text/css">
             h1, h2 { color: #333; font-family: "Arial", sans-serif; text-align: center; margin-bottom: 0;  }
