--- a/chart.html
+++ b/chart.html
@@ -25,9 +25,9 @@
 {% for chart in charts.keys() %}
                 var {{ chart }}_chart_data = new google.visualization.DataTable();
                 {{ chart }}_chart_data.addColumn('string', 'Time');
-    {% for realm in realms[chart] %}
-                {{ chart }}_chart_data.addColumn('number', '{{ translations[realm] }} (online)');
-                {{ chart }}_chart_data.addColumn('number', '{{ translations[realm] }} (queued)');
+    {% for realm in realms[chart]['realms'] %}
+                {{ chart }}_chart_data.addColumn('number', '{{ translations[realm] }} — online');
+                {{ chart }}_chart_data.addColumn('number', '{{ translations[realm] }} — queued');
     {% endfor %}
 
                 {{ chart }}_chart_data.addRows([
@@ -37,11 +37,7 @@
                         '{{ sample[0] }}',
         {% for lines in sample[1] %}
             {% for value in lines[1:] %}
-                {% if value == 0 %}
-                        null,
-                {% else %}
                         {{ value }},
-                {% endif %}
             {% endfor %}
         {% endfor %}
                     ],
@@ -52,13 +48,21 @@
                 var options = {
                     'title': false,
                     'vAxis': {
-                        'ticks': [0, 250, 500, 750, 1000, 1250, 1500, 1750, 2000, 2250, 2500, 2750, 3000, 3250, 3500, 3750, 4000],
                         'viewWindowMode': 'maximized',
                     }
                 };
 
 {% for chart in charts.keys() %}
                 options.title = '{{ chart }}';
+                options.vAxis.ticks = [
+    {% for value in range(0, realms[chart]['capacity'] + 1500, 250) %}
+        {% if value == realms[chart]['capacity'] %}
+                    {v: {{ value }}, f: 'max'},
+        {% else %}
+                    {{ value }},
+        {% endif %}
+    {% endfor %}
+                ];
                 var {{ chart }}_chart = new google.visualization.LineChart(document.getElementById('{{ chart }}_chart_div'));
                 {{ chart }}_chart.draw({{ chart }}_chart_data, options);
 {% endfor %}
