add MoP realm: Stormstout

--- a/chart.html
+++ b/chart.html
@@ -6,7 +6,8 @@
         <script src="https://www.google.com/jsapi"></script>
         <meta name="description" content="Charts with an evolution of the number of players online on all Molten realms." />
         <meta name="keywords" content="charts, graphics, molten, molten-wow, players, world of warcraft, molten realms, players online,
-                WotLK, Lordaeron, Deathwing, Ragnaros, Cataclysm, Frostwolf, Neltharion, Sargeras, Warsong" />
+                WotLK, Cata, MoP, Wrath of the Lich King, Cataclysm, Mists of Pandaria,
+                Lordaeron, Deathwing, Ragnaros, Cataclysm, Frostwolf, Neltharion, Sargeras, Warsong, Stormstout" />
         <style type="text/css">
             h1, h2 { color: #333; font-family: "Arial", sans-serif; text-align: center; margin-bottom: 0;  }
             h2 { margin: 0; font-size: 12pt; color: #666; }
