--- a/chart.html
+++ b/chart.html
@@ -9,8 +9,11 @@
                 WotLK, Cata, MoP, Wrath of the Lich King, Cataclysm, Mists of Pandaria,
                 Lordaeron, Deathwing, Ragnaros, Cataclysm, Frostwolf, Neltharion, Sargeras, Warsong, Stormstout" />
         <style type="text/css">
-            h1, h2 { color: #333; font-family: "Arial", sans-serif; text-align: center; margin-bottom: 0;  }
+            html, body { margin: 0; padding: 0; }
+            body { margin: 0 0 50px 0; }
+            h1, h2 { color: #333; font-family: "Arial", sans-serif; text-align: center; margin-bottom: 0; }
             h2 { margin: 0; font-size: 12pt; color: #666; }
+            .chart { width: 100%; height: 500px; }
         </style>
     </head>
     <body>
@@ -74,7 +77,7 @@
         <h2>Last update: {{ now }} — Server time</h2>
         {# <h2>(This chart is now empty since Molten has decided to start showing their population numbers only to premium users, i.e., those who pay to win)</h2> #}
 {% for chart in charts.keys() %}
-        <div id="{{ chart }}_chart_div" style="width: 1200px; height: 500px;"></div>
+        <div id="{{ chart }}_chart_div" class="chart"></div>
 {% endfor %}
     </body>
 </html>
