--- a/chart.html
+++ b/chart.html
@@ -10,44 +10,66 @@
                 Lordaeron, Deathwing, Ragnaros, Cataclysm, Frostwolf, Neltharion, Sargeras, Warsong, Stormstout" />
         <style type="text/css">
             html, body { margin: 0; padding: 0; }
-            body { margin: 0 0 50px 0; }
-            h1, h2 { color: #333; font-family: "Arial", sans-serif; text-align: center; margin-bottom: 0; }
+            body { font-family: "Arial", sans-serif; color: #333; }
+            h1, h2 { color: #333; text-align: center; margin-bottom: 0; }
             h2 { margin: 0; font-size: 12pt; color: #666; }
+            .note { background: #f6f6f6; border-top: 1px #e0e0e0 solid; padding: 30px; margin-top: 50px; }
+            p { width: 1000px; margin: 0 auto 20px; }
+            code { width: 1000px; margin: 0 auto; border-left: 5px #e0e0e0 solid; padding-left: 10px; box-sizing: border-box; display: block; }
             .chart { width: 100%; height: 500px; }
         </style>
     </head>
     <body>
+        <h1>Molten: players online in the last 7 days</h1>
+        <h2>Last update: {{ now }} — Server time</h2>
+        {% for chart in charts.keys() %}
+            <div id="{{ chart }}_chart_div" class="chart"></div>
+        {% endfor %}
+        <div class="note">
+            <p>This page is—hopefully—generated every 15 minutes.</p>
+            <p>Source code is available here: <a href="https://github.com/wodim/molten-plotter">https://github.com/wodim/molten-plotter</a></p>
+            <p>The counts of players displayed in the home page for WotLK realms are fake. I subtract 1000 players from each realm.<br>
+                I am not sure of what they are doing exactly, but the result of subtracting 1000 is very reasonable.<br>
+                In over one and a half million samples, there have never been less than 1000 players online.</p>
+            <code>
+                sqlite> select count(*) from plot where realm in ('Lordaeron', 'Ragnaros', 'Deathwing') and users_online < 1000 and users_online != 0;<br>
+                <strong>0</strong><br>
+                sqlite> select count(*) from plot where realm in ('Lordaeron', 'Ragnaros', 'Deathwing');<br>
+                <strong>1523715</strong><br>
+            </code>
+        </div>
         <script>
             google.load("visualization", "1", {packages:["corechart"]});
             google.setOnLoadCallback(drawChart);
 
-{#
-    chart: cata or wotlk (since there are two charts, one for expansion)
-    line: each one of the lines traced, two for realm (online and queued)
-#}
+            {#
+                chart: cata or wotlk (since there are two charts, one for expansion)
+                line: each one of the lines traced, two for realm (online and queued)
+            #}
             function drawChart() {
-{% for chart in charts.keys() %}
-                var {{ chart }}_chart_data = new google.visualization.DataTable();
-                {{ chart }}_chart_data.addColumn('string', 'Time');
-    {% for realm in realms[chart]['realms'] %}
-                {{ chart }}_chart_data.addColumn('number', '{{ translations[realm] }} — online');
-                {{ chart }}_chart_data.addColumn('number', '{{ translations[realm] }} — queued');
-    {% endfor %}
+                {% for chart in charts.keys() %}
+                    var {{ chart }}_chart_data = new google.visualization.DataTable();
+                    {{ chart }}_chart_data.addColumn('string', 'Time');
 
-                {{ chart }}_chart_data.addRows([
-    {# for each one of the values... #}
-    {% for sample in charts[chart].iteritems() %}
-                    [
-                        '{{ sample[0] }}',
-        {% for lines in sample[1] %}
-            {% for value in lines[1:] %}
-                        {{ value }},
-            {% endfor %}
-        {% endfor %}
-                    ],
-    {% endfor %}
-                ]);
-{% endfor %}
+                    {% for realm in realms[chart]['realms'] %}
+                        {{ chart }}_chart_data.addColumn('number', '{{ translations[realm] }} — online');
+                        {{ chart }}_chart_data.addColumn('number', '{{ translations[realm] }} — queued');
+                    {% endfor %}
+
+                    {{ chart }}_chart_data.addRows([
+                        {# for each one of the values... #}
+                        {% for sample in charts[chart].iteritems() %}
+                            [
+                                '{{ sample[0] }}',
+                                {% for lines in sample[1] %}
+                                    {% for value in lines[1:] %}
+                                                {{ value }},
+                                    {% endfor %}
+                                {% endfor %}
+                            ],
+                        {% endfor %}
+                    ]);
+                {% endfor %}
 
                 var options = {
                     'title': false,
@@ -56,28 +78,21 @@
                     }
                 };
 
-{% for chart in charts.keys() %}
-                options.title = '{{ chart }}';
-                options.vAxis.ticks = [
-    {% for value in range(0, realms[chart]['capacity'] + 1500, 250) %}
-        {% if value == realms[chart]['capacity'] %}
-                    {v: {{ value }}, f: 'max'},
-        {% else %}
-                    {{ value }},
-        {% endif %}
-    {% endfor %}
-                ];
-                var {{ chart }}_chart = new google.visualization.LineChart(document.getElementById('{{ chart }}_chart_div'));
-                {{ chart }}_chart.draw({{ chart }}_chart_data, options);
-{% endfor %}
+                {% for chart in charts.keys() %}
+                    options.title = '{{ chart }}';
+                    options.vAxis.ticks = [
+                        {% for value in range(0, realms[chart]['max'] + 250, 250) %}
+                            {% if value == realms[chart]['capacity'] %}
+                                {v: {{ value }}, f: 'max'},
+                            {% else %}
+                                {{ value }},
+                            {% endif %}
+                        {% endfor %}
+                    ];
+                    var {{ chart }}_chart = new google.visualization.LineChart(document.getElementById('{{ chart }}_chart_div'));
+                    {{ chart }}_chart.draw({{ chart }}_chart_data, options);
+                {% endfor %}
             }
         </script>
-
-        <h1>Molten: players online in the last 7 days</h1>
-        <h2>Last update: {{ now }} — Server time</h2>
-        {# <h2>(This chart is now empty since Molten has decided to start showing their population numbers only to premium users, i.e., those who pay to win)</h2> #}
-{% for chart in charts.keys() %}
-        <div id="{{ chart }}_chart_div" class="chart"></div>
-{% endfor %}
     </body>
 </html>
